evaluation with pickle and table output

--- a/notebooks/time_to_bpm.ipynb
+++ b/notebooks/time_to_bpm.ipynb
@@ -12,93 +12,28 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
-    "import os\n",
-    "# Plotting: set 'colab' for Google Colaboratory, 'notebook' otherwise\n",
-    "vhr.plot.VisualizeParams.renderer = 'notebook'  # or 'notebook'"
+    "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "YYKTCUkf7Y6l"
-   },
-   "outputs": [],
-   "source": [
-    "# -- LOAD A DATASET\n",
-    "\n",
-    "dataset_name = 'lgi_ppgi'          # the name of the python class handling it \n",
-    "\n",
-    "video_dirs = os.listdir('../cpi/')\n",
-    "video_DIR = '../cpi/cpi_resting/'  # dir containing videos\n",
-    "BVP_DIR = video_DIR    # dir containing BVPs GT\n",
-    "\n",
-    "dataset = vhr.datasets.datasetFactory(dataset_name, videodataDIR=video_DIR, BVPdataDIR=BVP_DIR)\n",
-    "\n",
-    "#overwrite to use compressed video\n",
-    "# setattr(dataset,'video_EXT','mp4')\n",
-    "dataset.video_EXT = 'mp4'\n",
-    "dataset.__init__(videodataDIR=video_DIR, BVPdataDIR=BVP_DIR)\n",
-    "\n",
-    "\n",
-    "allvideo = dataset.videoFilenames\n",
-    "\n",
-    "# print the list of video names with the progressive index (idx)\n",
-    "for v in range(len(allvideo)):\n",
-    "  print(v, allvideo[v])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "AKz1w2i48u-Z"
-   },
-   "outputs": [],
-   "source": [
-    "# -- PARAMETER SETTING\n",
-    "\n",
-    "wsize = 8          # seconds of video processed (with overlapping) for each estimate \n",
-    "video_idx = 0      # index of the video to be processed\n",
-    "fname = dataset.getSigFilename(video_idx)\n",
-    "sigGT = dataset.readSigfile(fname)\n",
-    "test_bvp = sigGT.data\n",
-    "bpmGT, timesGT = sigGT.getBPM(wsize)\n",
-    "videoFileName = dataset.getVideoFilename(video_idx)\n",
-    "print('Video processed name: ', videoFileName)\n",
-    "fps = vhr.extraction.utils.get_fps(videoFileName)\n",
-    "print('Video frame rate:     ',fps)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "# a = sigGT.spectrogram()\n",
-    "# sigGT.displaySpectrum(display=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.plot(timesGT,bpmGT) \n",
-    "hr_df = pd.DataFrame({'time':timesGT,'bpm':bpmGT})\n",
-    "hr_df.to_csv('hr_cpi_resting.csv', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['id1', 'id2', 'id3', 'id4', 'id5', 'id6']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "video_dirs = os.listdir('../cpi/')\n",
-    "print('../cpi/'+video_dirs[0])"
+    "video_dirs"
    ]
   },
   {
@@ -109,7 +44,6 @@
    "source": [
     "# all videos at once\n",
     "# -- LOAD A DATASET\n",
-    "\n",
     "dataset_name = 'lgi_ppgi'          # the name of the python class handling it \n",
     "video_dirs = os.listdir('../cpi/')\n",
     "\n",
@@ -120,7 +54,7 @@
     "  dataset = vhr.datasets.datasetFactory(dataset_name, videodataDIR=video_DIR, BVPdataDIR=BVP_DIR)\n",
     "  dataset.video_EXT = 'mp4'\n",
     "  dataset.__init__(videodataDIR=video_DIR, BVPdataDIR=BVP_DIR)\n",
-    "\n",
+    "  allvideo = dataset.videoFilenames\n",
     "  # print the list of video names with the progressive index (idx)\n",
     "  for v in range(len(allvideo)):\n",
     "    print(v, allvideo[v])\n",
