--- a/notebooks/time_to_bpm.ipynb
+++ b/notebooks/time_to_bpm.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -26,7 +26,7 @@
        "['id1', 'id2', 'id3', 'id4', 'id5', 'id6']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -38,9 +38,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 ../cpi/id1\\alex_gym\\cv_camera_sensor_stream_handler.mp4\n",
+      "1 ../cpi/id1\\alex_resting\\cv_camera_sensor_stream_handler.mp4\n",
+      "2 ../cpi/id1\\alex_rotation\\cv_camera_sensor_stream_handler.mp4\n",
+      "3 ../cpi/id1\\alex_talk\\cv_camera_sensor_stream_handler.mp4\n",
+      "0 ../cpi/id2\\angelo_gym\\cv_camera_sensor_stream_handler.mp4\n",
+      "1 ../cpi/id2\\angelo_resting\\cv_camera_sensor_stream_handler.mp4\n",
+      "2 ../cpi/id2\\angelo_rotation\\cv_camera_sensor_stream_handler.mp4\n",
+      "3 ../cpi/id2\\angelo_talk\\cv_camera_sensor_stream_handler.mp4\n",
+      "0 ../cpi/id3\\cpi_gym\\cv_camera_sensor_stream_handler.mp4\n",
+      "1 ../cpi/id3\\cpi_resting\\cv_camera_sensor_stream_handler.mp4\n",
+      "2 ../cpi/id3\\cpi_rotation\\cv_camera_sensor_stream_handler.mp4\n",
+      "3 ../cpi/id3\\cpi_talk\\cv_camera_sensor_stream_handler.mp4\n",
+      "0 ../cpi/id4\\harun_gym\\cv_camera_sensor_stream_handler.mp4\n",
+      "1 ../cpi/id4\\harun_resting\\cv_camera_sensor_stream_handler.mp4\n",
+      "2 ../cpi/id4\\harun_rotation\\cv_camera_sensor_stream_handler.mp4\n",
+      "3 ../cpi/id4\\harun_talk\\cv_camera_sensor_stream_handler.mp4\n",
+      "0 ../cpi/id5\\david_gym\\cv_camera_sensor_stream_handler.mp4\n",
+      "1 ../cpi/id5\\david_resting\\cv_camera_sensor_stream_handler.mp4\n",
+      "2 ../cpi/id5\\david_rotation\\cv_camera_sensor_stream_handler.mp4\n",
+      "3 ../cpi/id5\\david_talk\\cv_camera_sensor_stream_handler.mp4\n",
+      "0 ../cpi/id6\\felix_gym\\cv_camera_sensor_stream_handler.mp4\n",
+      "1 ../cpi/id6\\felix_resting\\cv_camera_sensor_stream_handler.mp4\n",
+      "2 ../cpi/id6\\felix_rotation\\cv_camera_sensor_stream_handler.mp4\n",
+      "3 ../cpi/id6\\felix_talk\\cv_camera_sensor_stream_handler.mp4\n"
+     ]
+    }
+   ],
    "source": [
     "# all videos at once\n",
     "# -- LOAD A DATASET\n",
@@ -61,18 +92,22 @@
     "\n",
     "  # -- PARAMETER SETTING\n",
     "\n",
-    "  wsize = 8          # seconds of video processed (with overlapping) for each estimate \n",
-    "  video_idx = 0      # index of the video to be processed\n",
-    "  fname = dataset.getSigFilename(video_idx)\n",
-    "  sigGT = dataset.readSigfile(fname)\n",
-    "  bpmGT, timesGT = sigGT.getBPM(wsize)\n",
-    "  hr_df = pd.DataFrame({'time':timesGT,'bpm':bpmGT})\n",
-    "  hr_df.to_csv(f'../data/hr_data/{video_dir}.csv', index=False)"
+    "    wsize = 8          # seconds of video processed (with overlapping) for each estimate \n",
+    "    # video_idx = 0      # index of the video to be processed\n",
+    "    fname = dataset.getSigFilename(v)\n",
+    "    try:\n",
+    "      sigGT = dataset.readSigfile(fname)\n",
+    "    except AssertionError:\n",
+    "      continue\n",
+    "    bpmGT, timesGT = sigGT.getBPM(wsize)\n",
+    "    hr_df = pd.DataFrame({'time':timesGT,'bpm':bpmGT})\n",
+    "    person = allvideo[v].split(os.sep)[1]\n",
+    "    hr_df.to_csv(f'../data/hr_data/{person}.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,44 +119,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "glob.glob('*.mp4')\n",
-    "shutil.copy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import sys\n",
-    "sys.path.append('..')\n",
-    "from src.utils import video2st_maps as v2m"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<module 'src.utils.video2st_maps' from '..\\\\src\\\\utils\\\\video2st_maps.py'>"
+       "'..\\\\cpi\\\\id1\\\\alex_gym\\\\cv_camera_sensor_stream_handler.mp4'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import importlib\n",
-    "importlib.reload(v2m)"
+    "files = glob.glob('..'+os.sep+'cpi/*/*/*.mp4')\n",
+    "files[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "os.path.isfile(files[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'../data/train/cv_camera_sensor_stream_handler.mp4'"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'../data/train/'+file.split(os.sep)[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "files = glob.glob('..'+os.sep+'cpi/*/*/*.mp4')\n",
+    "for file in files:\n",
+    "    person = file.split(os.sep)[3]\n",
+    "    shutil.copy(file, '../data/train')\n",
+    "\n",
+    "    dest_dir = 'data/train'\n",
+    "    src_file = file\n",
+    "    \n",
+    "    dst_file = '../data/train/'+file.split(os.sep)[-1]\n",
+    "    new_dst_file_name = f'../data/train/{person}.mp4'\n",
+    "    try:\n",
+    "        os.rename(dst_file, new_dst_file_name)#rename\n",
+    "    except FileExistsError:\n",
+    "        continue"
    ]
   },
   {
