ica working for last region, last timestep

--- a/notebooks/time_to_bpm.ipynb
+++ b/notebooks/time_to_bpm.ipynb
@@ -176,7 +176,7 @@
     }
    ],
    "source": [
-    "'../data/train/'+file.split(os.sep)[-1]"
+    "# '../data/train/'+file.split(os.sep)[-1]"
    ]
   },
   {
