--- a/RhythmNet/st_maps_exploration.ipynb
+++ b/RhythmNet/st_maps_exploration.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Checking out how the spatial temporal maps works for the RhythmNet model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
