--- a/RhythmNet/train.ipynb
+++ b/RhythmNet/train.ipynb
@@ -4,6 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Training and evaluating the RhythmNet model\n",
+    "\n",
+    "This is where everything regarding the RhythmNet model happens. All the spatial temporal maps of the videos should be generated with `generate_st_maps.py`\n",
+    "\n",
     "Pipeline\n",
     "\n",
     "0. Get HR as correct signal from pyVHR\n",
@@ -217,7 +221,7 @@
     "                                                                                    load_on_cpu=load_on_cpu)\n",
     "if checkpoint_flag:\n",
     "    print(f\"Checkpoint Found! Loading from checkpoint :: LOSS={checkpointed_loss}\")\n",
-    "    with open('../checkpoint/train_loss.pkl', \"rb\") as f:\n",
+    "    with open('models/train_loss.pkl', \"rb\") as f:\n",
     "        pickle.load(f)\n",
     "else:\n",
     "    print(\"Checkpoint Not Found! Training from beginning\")\n"
@@ -341,14 +345,14 @@
    "outputs": [],
    "source": [
     "if not checkpoint_flag:\n",
-    "    with open('../checkpoint/train_loss.pkl', \"wb\") as f:\n",
+    "    with open('models/train_loss.pkl', \"wb\") as f:\n",
     "        pickle.dump(train_losses, f)\n",
-    "    with open('../checkpoint/test_loss.pkl', \"wb\") as f:\n",
+    "    with open('models/test_loss.pkl', \"wb\") as f:\n",
     "        pickle.dump(test_losses, f)\n",
     "else:\n",
-    "    with open('../checkpoint/train_loss.pkl', \"rb\") as f:\n",
+    "    with open('models/train_loss.pkl', \"rb\") as f:\n",
     "        train_losses = pickle.load(f)\n",
-    "    with open('../checkpoint/test_loss.pkl', \"rb\") as f:\n",
+    "    with open('models/test_loss.pkl', \"rb\") as f:\n",
     "        test_losses = pickle.load(f)"
    ]
   },
