--- a/notebooks/Laplacian_pyramid.ipynb
+++ b/notebooks/Laplacian_pyramid.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here I just investigate the use of a Laplacian pyramid which was mentioned in some other papers"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 37,
    "metadata": {},
