--- a/notebooks/time_to_bpm.ipynb
+++ b/notebooks/time_to_bpm.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This notebook is for converting the GT heart rate signal to a csv with rows [time stamp, heart rate] such that it is in a format compatible with the RhythmNet model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
